feat: added dependencies for sass,ejs and json

--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "GPL-3.0",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "json-loader": "^0.5.7",
     "mongodb": "^2.2.31",
+    "node-sass-middleware": "^0.11.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
